feat: add statistics endpoint
