# api/openapi.yaml
@@ -123,6 +123,15 @@ components:
           type: string
           enum: [OPEN, MERGED]
 
+    AssignmentCountPerUser:
+      type: object
+      required: [ user_id, assigned_count ]
+      properties:
+        user_id:
+          type: string
+        assigned_count:
+          type: integer
+
 paths:
   /team/add:
     post:
@@ -521,3 +530,33 @@ paths:
                 error:
                   code: INTERNAL_SERVER_ERROR
                   message: internal server error
+
+  /stats/assignments:
+    get:
+      summary: Получить статистику назначений PR по пользователям
+      description: Возвращает количество назначений ревьюеров по каждому пользователю.
+      security:
+        - AdminToken: []
+      responses:
+        '200':
+          description: Статистика успешно получена
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  by_user:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/AssignmentCountPerUser"
+                    example:
+                      - user_id: "u1"
+                        assigned_count: 3
+                      - user_id: "u2"
+                        assigned_count: 5
+        '401':
+          description: Нет/неверный админский токен
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrorResponse"
